// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transitionProperty renders 0 1`] = `
Array [
  .c0 {
  -webkit-transition-property: 0;
  transition-property: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: 0;
  transition-property: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: 0;
  transition-property: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: 0;
  transition-property: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders function 1`] = `
Array [
  .c0 {
  -webkit-transition-property: hasnot;
  transition-property: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: has;
  transition-property: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: hasnot;
  transition-property: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: has;
  transition-property: has;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transition-property: invalid.path.1;
  transition-property: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: invalid.path.1;
  transition-property: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: invalid.path.1;
  transition-property: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: invalid.path.1;
  transition-property: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transition-property: -54881;
  transition-property: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: -54881;
  transition-property: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: -42365;
  transition-property: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: -42365;
  transition-property: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: July;
    transition-property: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: August;
    transition-property: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: September;
    transition-property: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-property: November;
    transition-property: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: July;
    transition-property: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: August;
    transition-property: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: September;
    transition-property: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-property: November;
    transition-property: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: May;
    transition-property: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: June;
    transition-property: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: April;
    transition-property: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-property: November;
    transition-property: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: May;
    transition-property: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: June;
    transition-property: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transition-property: April;
    transition-property: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transition-property: November;
    transition-property: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transition-property: July;
    transition-property: July;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: August;
    transition-property: August;
  }
}

@media January {
  .c0 {
    -webkit-transition-property: September;
    transition-property: September;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: November;
    transition-property: November;
  }
}

@media June {
  .c0 {
    -webkit-transition-property: August;
    transition-property: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transition-property: July;
    transition-property: July;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: August;
    transition-property: August;
  }
}

@media January {
  .c0 {
    -webkit-transition-property: September;
    transition-property: September;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: November;
    transition-property: November;
  }
}

@media June {
  .c0 {
    -webkit-transition-property: August;
    transition-property: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transition-property: January;
    transition-property: January;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: December;
    transition-property: December;
  }
}

@media January {
  .c0 {
    -webkit-transition-property: April;
    transition-property: April;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: May;
    transition-property: May;
  }
}

@media June {
  .c0 {
    -webkit-transition-property: June;
    transition-property: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transition-property: January;
    transition-property: January;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: December;
    transition-property: December;
  }
}

@media January {
  .c0 {
    -webkit-transition-property: April;
    transition-property: April;
  }
}

@media April {
  .c0 {
    -webkit-transition-property: May;
    transition-property: May;
  }
}

@media June {
  .c0 {
    -webkit-transition-property: June;
    transition-property: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transition-property: 54881;
  transition-property: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: 54881;
  transition-property: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: 42365;
  transition-property: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: 42365;
  transition-property: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders string 1`] = `
Array [
  .c0 {
  -webkit-transition-property: July;
  transition-property: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: July;
  transition-property: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: June;
  transition-property: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: June;
  transition-property: June;
}

<div
    className="c0"
  />,
]
`;

exports[`transitionProperty renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transition-property: DarkSlateBlue;
  transition-property: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: DarkSlateBlue;
  transition-property: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: DarkSlateBlue;
  transition-property: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transition-property: DarkSlateBlue;
  transition-property: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
